workspace = { members = [ "examples/masking_test", "examples/render_sprite"] }

[package]
name = "ABC_lumenpyx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lumenpyx = { git = "https://github.com/ABC-Engine/lumenpyx" }
# REPLACE BEFORE PUBLISHING
lumenpyx = { path = "G:/github_projects/lumenpyx" }
#ABC_Game_Engine = { git = "https://github.com/ABC-Engine/ABC-Game-Engine"}
# REPLACE BEFORE PUBLISHING
ABC_Game_Engine = {path = "G:/github_projects/ABC-Game-Engine"}

glium = "0.34.0"
winit = "0.29.9"
mouse_position = "0.1.4"

