[package]
name = "render_sprite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ABC_lumenpyx = {path = "../../."}
# For now, we will use the local version of the ABC_Game_Engine
ABC_Game_Engine = { path = "../../../ABC-Game-Engine"}
